add the Maven repository on GitHub Packages registry

--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,19 @@ plugins {
 }
 
 group 'com.tomgregory'
-version '1.0-SNAPSHOT'
+version '0.2.0'
 
 sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    maven {
+        url = uri("https://maven.pkg.github.com/kazurayam/gradle-java-library-plugin-library")
+        credentials {
+            username = project.findProperty("gpr.user") ?: System.getenv("GPR_USERNAME")
+            password = project.findProperty("gpr.key") ?: System.getenv("GPR_TOKEN")
+        }
+    }
     mavenLocal()
 }
 
