--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,6 +29,7 @@ jobs:
         run: |
           mkdir -p ~/.gradle/
           echo ${GRADLE_PROPERTIES} > ~/.gradle/gradle.properties
+          cat ~/.gradle/gradle.properties
 
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1
