--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,16 @@ repositories {
     maven {
         url = uri("https://maven.pkg.github.com/kazurayam/gradle-java-library-plugin-library")
         credentials {
-            username = project.findProperty("gpr.user") ?: System.getenv("GPR_USERNAME")
-            password = project.findProperty("gpr.key") ?: System.getenv("GPR_TOKEN")
+            username = project.findProperty("gpr.user")
+            password = project.findProperty("gpr.key")
         }
     }
     mavenLocal()
 }
+
+println "project.findProperty(\"gpr.user\")=" + project.findProperty("gpr.user")
+println "project.findProperty(\"gpr.key\")=" + project.findProperty("gpr.key")
+
 
 dependencies {
     implementation group: 'com.tomgregory', name: 'gradle-java-library-plugin-library', version: '0.2.0'
